Fix missing margin for removed items spacing

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body, #container{
 }
 
 .item {
-  margin: 15px;
+  margin-bottom: 15px;
   border-radius: 3px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.3),0 -3px 8px rgba(0,0,0,0.2);
 }
